--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
     "autoprefixer": "^10.4.11",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
+  },
+  "engines": {
+    "node": "v16.15.0",
+    "npm": "8.5.5"
   }
 }
